www/index.css
:root {
    --primary-color: #797f8e;
    --primary-dark-color: #555b69;
    --secondary-color: #242c37;
    --secondary-dark-color: #1d242d;
    --primary-action-color: #4fe4c1;
    --primary-action-dark-color: #10755d;
    --secondary-action-color: #fac372;
}

* {
    margin: 0;
    padding: 0;
}

html,
body {
    height: 100%;
    margin: 0;
}

body {
    display: grid;
    align-items: center;
    height: 100%;
    color: var(--primary-color);
    background-color: var(--secondary-color);
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
        sans-serif;
    font-size: 0.8rem;
}

h1 {
    margin: 0 0 0.2rem 0;
    color: var(--primary-action-color);
    font-size: 2rem;
}

h2 {
    margin: 0 0 1rem 0;
    font-size: 1rem;
    font-weight: 300;
}

.section {
    padding: 1rem;
}

.parent {
    height: 100%;
    display: grid;
    grid-template: auto 1fr auto / auto 1fr auto;
    overflow: hidden;
}

.left-panel {
    width: 20rem;
    grid-column: 1 / 2;
    border-right: solid 1px var(--primary-dark-color);
    box-shadow: 1px 1px 5px black;
}

main {
    grid-column: 2 / 3;
    overflow: auto;
}

canvas {
    background-color: white;
    border: solid 0.2rem var(--primary-dark-color);
    border-radius: 0.5rem;
}

label {
    margin-right: 0.5rem;
}

button {
    border: none;
    letter-spacing: 0.25rem;
    cursor: pointer;
    background-color: var(--primary-action-color);
    border-radius: 50px;
    color: var(--secondary-color);
    width: 6rem;
    margin: 0.5rem 0;
    padding: 0.5rem;
}

button:hover {
    background-color: var(--primary-color);
}

button:active {
    background-color: var(--secondary-action-color);
}

[type='radio']:checked,
[type='radio']:not(:checked) {
    display: none;
}

[type='radio']:checked + label,
[type='radio']:not(:checked) + label {
    position: relative;
    padding-left: 1.5rem;
    cursor: pointer;
    line-height: 1rem;
    display: inline-block;
    color: var(--primary-color);
}

[type='radio']:checked + label:before,
[type='radio']:not(:checked) + label:before {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    width: 15px;
    height: 15px;
    border: 1px solid var(--primary-action-color);
    border-radius: 100%;
}

[type='radio']:checked + label:before {
    background: var(--primary-action-dark-color);
}

[type='radio']:not(:checked) + label:before {
    background: var(--primary-dark-color);
}

[type='radio']:checked + label:after,
[type='radio']:not(:checked) + label:after {
    content: '';
    width: 9px;
    height: 9px;
    background: var(--primary-action-color);
    position: absolute;
    top: 4px;
    left: 4px;
    border-radius: 100%;
    -webkit-transition: all 0.2s ease;
    transition: all 0.2s ease;
}

[type='radio']:not(:checked) + label:after {
    opacity: 0;
    -webkit-transform: scale(0);
    transform: scale(0);
}

[type='radio']:checked + label:after {
    opacity: 1;
    -webkit-transform: scale(1);
    transform: scale(1);
}

input[type='number'] {
    border: solid 1px var(--primary-action-color);
    outline: none;
    background-color: var(--primary-action-dark-color);
    border-radius: 50px;
    padding: 0.2rem 0.5rem;
    color: var(--primary-action-color);
    width: 6rem;
    margin: 0.3rem;
}

.horizontal-spacer {
    margin: 0 1rem;
}

.main {
    display: flex;
    height: 100%;
    overflow: hidden;
}

.input {
    margin: 0.5rem;
}

.buttons {
    margin: 1rem 0 0 0.5rem;
}

.canvas-center {
    display: flex;
    justify-content: center;
    width: 100%;
    margin-bottom: 1rem;
    padding-top: 3rem;
    overflow: auto;
}

.canvas-end {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.radio-button {
    display: flex;
    align-items: center;
    margin: 0.5rem 1.3rem 0.5rem 0;
}

.colony-generation,
.engine-generation {
    display: flex;
    margin: 0 0.5rem;
}

.counter {
    font-family: monospace;
    text-align: right;
    color: var(--primary-action-color);
    background-color: var(--primary-dark-color);
    width: 4rem;
    border-radius: 10rem;
    padding: 0.3rem 1rem;
    margin-top: 1rem;
}

footer {
    grid-column: 1 / 4;
    border-top: solid 1px var(--primary-dark-color);
    box-shadow: 1px 1px 5px black;
    background-color: var(--secondary-dark-color);
    padding: 0.5rem !important;
    text-align: end;
}

.footer {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.version {
    margin: 0.5rem;
    font-size: 1rem;
    letter-spacing: 0.1rem;
    color: var(--primary-dark-color);
}

.svg {
    padding: 0.5rem;
    border-radius: 50%;
    cursor: pointer;
}

.svg:hover {
    background-color: var(--primary-dark-color);
}

.svg:active {
    background-color: var(--secondary-action-color);
}

.results {
    margin-top: 1.5rem;
}

.result {
    display: flex;
    justify-content: space-between;
    margin: 1rem 2.5rem 1rem 0.5rem;
    /* background-color: var(--primary-dark-color); */
    border: solid 1px var(--primary-dark-color);
    box-shadow: 1px 1px 3px black;
    padding: 0.5rem 1rem;
    border-radius: 0.3rem;
}

.result-value {
    color: var(--primary-action-color);
}

.frame-per-seconds {
    position: fixed;
    top: 1.5rem;
    left: 23.5rem;
    font-family: system-ui;
    color: var(--primary-color);
    background-color: rgb(85 91 105 / 51%);
    padding: 0.5rem;
    border: solid 1px var(--primary-dark-color);
    border-radius: 0.2rem;
    display: flex;
}

#ui-fps {
    width: 1.2rem;
    font-family: monospace;
}

